@startuml 13_sprint2_class_diagram
title Sprint 2 — Diagramme de classes\nGestion des interventions et des pannes

skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2E74B5
skinparam noteBackgroundColor #FFFDE7
skinparam noteBorderColor #F39C12
skinparam linetype ortho

enum InterventionType {
  PREVENTIVE
  CURATIVE
}

enum InterventionStatut {
  PLANIFIEE
  EN_COURS
  REALISEE
  ANNULEE
}

enum PanneStatut {
  EN_ATTENTE
  PRISE_EN_CHARGE
  CONVERTIE
  ANNULEE
}

class User <<Technicien>> {
  + id : String
  + prenom : String
  + nom : String
  + email : String
  + telephone : String
  + role : UserRole
  + actif : Boolean
}

class Client {
  + id : String
  + email : String
  + telephone : String
}

class ClientEquipement {
  + id : String
  + clientId : String
  + equipementId : String
  + dateInstallation : Date
  + localisation : String
}

class Contract {
  + id : String
  + clientId : String
  + dateDebut : Date
  + dateFin : Date
  + statut : ContractStatut
  + clientEquipementIds : String[]
}

class Intervention {
  + id : String
  + reference : String
  + type : InterventionType
  + clientId : String
  + clientEquipementId : String
  + technicienId : String
  + contractId : String
  + datePrevue : Date
  + dateRealisation : Date
  + statut : InterventionStatut
  + couvertureContrat : Boolean
  + description : String
  + diagnostic : String
  + actionsRealisees : String
  + materielUtilise : String
  + dureeMinutes : Integer
  + observations : String
  --
  + demarrer() : void
  + cloturerPreventive(compteRendu, actions, materiel, duree) : void
  + cloturerCurative(diagnostic, actions, materiel, duree) : void
}

note right of Intervention
  Intervention préventive :
  ne génère jamais de facture.
end note

class Panne {
  + id : String
  + reference : String
  + clientId : String
  + clientEquipementId : String
  + dateDeclaration : Date
  + description : String
  + statut : PanneStatut
  + interventionId : String
  --
  + prendreEnCharge() : void
  + convertirEnIntervention(datePrevue) : Intervention
}

note right of Panne
  Description obligatoire.
end note

class PieceJointe {
  + id : String
  + filename : String
  + size : Integer
  + type : String
  + previewUrl : String
}

ClientEquipement "1"   <-- "*" Intervention   : concerne
User             "0..1" --  "*" Intervention  : affecté (technicien)
Contract         "0..1" --  "*" Intervention  : planifie
Panne            "1"    --  "0..1" Intervention : convertie en
Panne            "1"    *-- "*" PieceJointe   : contient
Client           "1"    --  "*" Panne         : déclare
ClientEquipement "1"    <-- "*" Panne         : concerne
Contract         "*"    --  "*" ClientEquipement : couvre

Intervention .. InterventionType
Intervention .. InterventionStatut
Panne        .. PanneStatut
@enduml
